✨ Update various files to replace stream.collect(Collectors.toList()) with toList() for improved readability and performance