@@ -107,7 +107,7 @@ public class ListKitsCommand {
             // Sort kit names for consistent display
             List<String> sortedKitNames = kitNames.stream()
                 .sorted(String.CASE_INSENSITIVE_ORDER)
-                .collect(Collectors.toList());
+                .toList();
 
             int totalKits = sortedKitNames.size();
             int maxPages = (int) Math.ceil((double) totalKits / KITS_PER_PAGE);
